--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ethers": "^6.13.2",
     "next": "15.5.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
