--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "15.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "ws": "^8.17.1",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
