--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.0",
     "@privy-io/react-auth": "^1.82.0",
     "axios": "^1.7.2",
     "ethers": "^6.13.2",
