--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "@headlessui/react": "^2.1.0",
     "@privy-io/react-auth": "^1.82.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "date-fns": "^2.30.0",
     "ethers": "^6.13.2",
     "next": "15.5.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "swr": "^2.2.4",
     "ws": "^8.17.1",
     "zustand": "^5.0.0"
