--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/client": "^3.14.0",
     "@headlessui/react": "^2.1.0",
     "@privy-io/react-auth": "^1.82.0",
     "axios": "^1.7.2",
@@ -18,6 +19,7 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^2.30.0",
     "ethers": "^6.13.2",
+    "graphql": "^16.11.0",
     "next": "15.5.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
