--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "ai-train": "node scripts/train_yield.js && node scripts/train_risk.js"
   },
   "dependencies": {
     "@apollo/client": "^3.14.0",
@@ -21,6 +22,7 @@
     "ethers": "^6.13.2",
     "graphql": "^16.11.0",
     "next": "15.5.3",
+    "python-shell": "^5.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
