--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "ai-train": "node scripts/train_yield.js && node scripts/train_risk.js"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "e2e": "cypress run",
+    "e2e:open": "cypress open",
+    "ai-train": "node scripts/train_yield.js && node scripts/train_risk.js",
+    "simulate": "node scripts/simulate.js"
   },
   "dependencies": {
     "@apollo/client": "^3.14.0",
@@ -21,6 +27,7 @@
     "date-fns": "^2.30.0",
     "ethers": "^6.13.2",
     "graphql": "^16.11.0",
+    "ioredis": "^5.3.2",
     "next": "15.5.3",
     "python-shell": "^5.0.0",
     "react": "^18.3.1",
@@ -34,8 +41,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "cypress": "^13.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
     "typescript": "^5.9.2"
   }
